fix dark mode transition

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -97,4 +97,5 @@
 
 * {
 	transition: transform 0.3s ease;
+	transition: color, background-color 0.3s ease;
 }
